--- a/pom.xml
+++ b/pom.xml
@@ -330,6 +330,7 @@
                                     <exclude>.gitattributes</exclude>
                                     <exclude>**/genkeys</exclude>
                                     <exclude>**/softhsm</exclude>
+                                    <exclude>**.adoc</exclude>
                                 </excludes>
                             </licenseSet>
                         </licenseSets>
